<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="35dp"
    android:background="@color/testBackground"
    tools:context=".fragments.TestResultFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/question_background">

        <TextView
            android:id="@+id/testCompleted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_completed"
            android:textSize="32sp"
            android:layout_marginTop="200dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/testResultPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percentExample"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/testCompleted" />

        <Button
            android:id="@+id/backToTestBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/back"
            android:background="@drawable/repeat_background"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="15dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>