<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TestFragment">


<!--    <FrameLayout-->
<!--        android:id="@+id/nameOfTestFrame"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentTop="true">-->
<!--        <TextView-->
<!--            android:id="@+id/nameOfTest"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:padding="15dp"-->
<!--            android:gravity="center_horizontal"-->
<!--            android:textSize="25sp"-->
<!--            android:text="Тема теста"-->
<!--            android:background="@color/colorActionBar"-->
<!--            android:textAlignment="center" />-->

<!--    </FrameLayout>-->

    <FrameLayout
        android:id="@+id/questionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/questionTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="15dp"
                android:text="@string/Question"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/currentOfQuestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/delimiter"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/delimiter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delimiter"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/countOfQuestions"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/countOfQuestions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginRight="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="15dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/questionFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/actionsFrame"
        android:layout_below="@id/questionTitle">


    </FrameLayout>


    <FrameLayout
        android:id="@+id/actionsFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/previousQuestionBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:background="@color/colorPrimary"
                android:text="@string/Back"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/nextQuestionBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="2dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:text="@string/Forward"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </FrameLayout>

</RelativeLayout>