<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainTaskLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    android:background="@color/colorPrimary">


    <LinearLayout

        android:id="@+id/titleTaskCl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/titleTask"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/taskTitle"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/typeTask"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/typeTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/schedule_pair_type_background"
                android:gravity="center_horizontal"
                android:paddingVertical="5dp"
                android:paddingHorizontal="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/typeOfWorkTitle"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="10dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="15dp"
            android:background="#878993" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <TextView
                android:id="@+id/descriptionTask"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/taskDescriptionTitle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintTop_toBottomOf="@id/titleTaskCl">-->

<!--        <TextView-->
<!--            android:id="@+id/descriptionTask"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            android:layout_marginLeft="15dp"-->
<!--            android:padding="10dp"-->
<!--            android:text="@string/taskDescriptionTitle"-->
<!--            android:layout_marginStart="15dp"-->
<!--            android:ellipsize="end"-->
<!--            android:maxLines="1"-->
<!--            />-->

<!--        <TextView-->
<!--            android:id="@+id/typeTask"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginBottom="15dp"-->
<!--            android:padding="2dp"-->
<!--            android:textAlignment="center"-->
<!--            android:background="@drawable/schedule_pair_type_background"-->
<!--            android:text="@string/typeOfWorkTitle"-->
<!--            android:gravity="center_horizontal"-->
<!--            android:layout_marginEnd="15dp"-->
<!--            android:layout_marginRight="15dp" />-->
<!--    </LinearLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>