<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sequence_item"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/answer_key_match_Cl"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/answer_key_match"
            android:layout_width="match_parent"
            android:layout_height="0dp"

            android:gravity="center"
            android:paddingVertical="18dp"
            android:text="@string/match_key"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#878993"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/answer_value_match_Cl"
        app:layout_constraintStart_toEndOf="@+id/answer_key_match_Cl"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/answer_value_match_Cl"
        android:layout_width="210dp"
        android:layout_height="80dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/answer_value_match"
            android:layout_width="0dp"
            android:layout_height="0dp"

            android:gravity="center"
            android:paddingVertical="18dp"
            android:text="@string/match_value"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginVertical="15dp"
            android:background="#878993"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout4"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:id="@+id/buttonsLL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/matchItemUp"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:contentDescription="@string/up_arrow"
                        app:srcCompat="@drawable/ic_item_up" />
                </FrameLayout>

                <FrameLayout
                    android:id="@+id/matchItemDown"
                    android:layout_width="match_parent"
                    android:layout_height="40dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        app:srcCompat="@drawable/ic_item_down" />
                </FrameLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>